--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,9 @@
 }
 
 .container-bg {
-  background-image: url(/image/donation6.jpg);
+  background-image: url(/image/top.jpg);
    background-repeat: no-repeat;
    background-size: cover;
-   text-align: center;
-   color: #ffffff;
    height: 680px;
    width: 100%;
 }
